<resources>
    <string name="app_name">Meteor Warrior</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="game_over">GAME OVER</string>
    <string name="score_150">Score : 150</string>
    <string name="high_score_0">high score : 0</string>
    <string name="rejouer">REJOUER</string>
    <string name="menu">MENU</string>
    <string name="jouer">JOUER</string>
    <string name="meteor_warrior">Meteor Warrior</string>
    <string name="un_bouclier_dor">Un bouclier doré</string>
    <string name="de_l_encre">De l\'encre</string>
</resources>
