<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/title"
    tools:context=".resultat">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/Boutonstyle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_over"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Boutonstyle1"
            android:text="@string/score_150"
            android:textSize="30sp"
            android:layout_marginTop="80sp"/>

        <TextView
            android:id="@+id/highscoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Boutonstyle1"
            android:text="@string/high_score_0"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Boutonstyle1"
            android:background="@null"
            android:text="@string/rejouer"
            android:textSize="30sp"
            android:layout_marginTop="80sp"
            android:onClick="tryagain"/>

        <Button
            android:id="@+id/third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Boutonstyle1"
            android:background="@null"
            android:text="@string/menu"
            android:textSize="30sp"
            android:layout_marginTop="10sp"
            android:onClick="menu"/>
    </LinearLayout>




</android.support.constraint.ConstraintLayout>